# rusty-jsyc

./: .gitignore  .jshintrc  .travis.yml  Cargo.toml  README.md  TODO.md  codecov.yml  package-lock.json  package.json
code/: example.js  helpers.js  index.html  vm.js
code/tests/: base.test.js  test_helper.js  vm.test.js
compiler/: Cargo.toml
compiler-interface/: Cargo.toml
compiler-interface/src/: composer.rs  errors.rs  main.rs  options.rs
compiler-interface/tests/: integration.rs
compiler-interface/tests/.compiled/: readme
compiler-interface/tests/data/stmts/for-loop/: init.json  test.js
compiler/src/: bytecode.rs  compiler.rs  error.rs  instruction_set.rs  jshelper.rs  lib.rs  main.rs  scope.rs
compiler/tests/: lib.rs
composer/: Cargo.toml
composer/src/: composer.rs  errors.rs  main.rs
composer/tests/: bin.rs  lib.rs
composer/tests/data/stmts/for-loop/: expected.json
playground/minimal/unobfuscated/: cmd.txt  index.html
playground/obfuscated/: bytecode.base64  disas.txt  index.html  vm.js
playground/snake/obfuscated/: bytecode.base64  index.html  vm.js
playground/snake/unobfuscated/: README.md  index.html  make.sh  snake.js  snake_helper.js
playground/unobfuscated/: index.html  snake.js  snake_helper.js
vm/: vm.js
vm/tests/: vm.test.js
